--- a/trunk/perldoc/ko/perl/5.10/perltoot.pod
+++ b/trunk/perldoc/ko/perl/5.10/perltoot.pod
@@ -1607,7 +1607,7 @@ old one.  This means you should be able to write a program like this:
 =end original
 
 이런 빈 클래스를 만드는 것은 "빈 서브클래스테스트"라고 불립니다.
-이것ㅡㄴ 기본 클래스에서 계승하는 것 이외에는, 아무것도 하지 않는 파생클래스를 
+이것은 기본 클래스에서 계승하는 것 이외에는, 아무것도 하지 않는 파생클래스를 
 만드는 것입니다. 오리지널의 기본 클래스는 적절히 설계되어 있으면, 
 새로운 파생클래스는, 낡은 것의 삽입식의 치환으로써 사용됩니다.
 이것이 의미하는 것은 다음과 같은 프로그램을 쓸 수 있다는 것입니다:
@@ -1629,16 +1629,13 @@ methods access package data via that reference, so we should be ok.
 
 =end original
 
-適切な設計によって、そうできます。
-適切な設計とは、常に bless() に、2 つの引数を与え、グローバルなデータに
-直接アクセスするのを避け、何も export しない設計のことです。
-上の方で定義している Person::new() 関数を見返したら、そうするように
-注意しています。
-コンストラクタで使われるパッケージデータが少しありますが、
-パッケージデータへのリファレンスが、オブジェクト自身に、蓄えられており、
-他の全てのメソッドはそのリファレンスを通して、パッケージデータに
-アクセスします。
-それで、よしとすべきです。
+적절한 설계에 의해, 그렇게 될 수 있습니다.
+적절한 설계라는 것은 항상 bless() 에 2개의 인수를 주고, 글로벌한 데이터에
+직접 접근하는 것을 피하고, 아무것도 export 하지 않는 설계를 말합니다.
+위 처럼 정의고 있는 Person::new() 함수를 살펴보면, 이런 설계를 취하고 있습니다.
+생성자로 사용되는 패키지 데이터가 조금 있지만, 패키지 데이터로의 리퍼런스가 
+오브젝트 자신에게, 쌓여져 있고, 다른 모든 메소드는 그 리퍼런스를 통해서, 
+패키지데이터에 접근합니다. 그러면 됩니다.
 
 =begin original
 
@@ -1656,18 +1653,18 @@ but methods do.
 
 =end original
 
-Person::new() 関数で、意図したこと -- 実際にはメソッドではないですか?
-たぶん、原則的には、メソッドです。
-メソッドは、ちょうど、その最初の引数に、クラスの名前(パッケージ)か、
-オブジェクト(bless されたリファレンス)を期待する関数です。
-Person::new()は、結局、C<< Person->new() >> メソッドと C<< Employee->new() >>
-メソッドの両方が呼んでいる関数です。
-メソッド呼び出しが関数呼び出しによく似ていながら、本当は、まったく
-同じではなく、この 2 つを同じものとして扱うなら、すぐに壊れたプラグラムしか
-残されないことを理解してください。
-第一に、現実に、基礎となっている呼び出しの慣例が違っています:
-メソッド呼び出しは、特別な引数を得ます。
-第二に、関数呼び出しは継承をしませんが、メソッド呼び出しは継承をします。
+Person::new() 함수로, 의도한 것 -- 실제는 메소드가 아닌가요?
+아마, 원칙적으로는 메소드입니다.
+메소드는 마침 그 첫번째 인수에 클래스 이름(패키지)이나, 
+오브젝트(bless 된 리퍼런스)를 기대하는 함수입니다.
+Person::new()는 결국 C<< Person->new() >> 메소드와 C<< Employee->new() >>
+메소드의 양쪽이 호출하고 있는 함수입니다.
+메소드호출이 함수호출과 매우 비슷하면서, 사실은 전 같은 것은 없고, 
+이 2개를 같은 것으로 취급하면, 곧 무너진 프로그램만 남지 않을 것을 
+이해해주세요.
+첫번째, 현실에 기초가 되는 호출의 관례가 다릅니다:
+메소드호출은, 특별한 인수를 얻습니다.
+두번째, 함수호출은 계승을 하지 않습니다만, 메소드 호출은 계승을 합니다.
 
 =begin original
 
@@ -1678,7 +1675,7 @@ Person::new()は、結局、C<< Person->new() >> メソッドと C<< Employee->n
 
 =end original
 
-        メソッド呼出            結果として、関数呼び出し
+        메소드호출              결과로써 함수호출
         -----------             ------------------------
         Person->new()           Person::new("Person")
         Employee->new()         Person::new("Employee")
@@ -1689,7 +1686,7 @@ So don't use function calls when you mean to call a method.
 
 =end original
 
-ですので、メソッドを呼ぼうとしているときに関数呼び出しを使わないでください。
+그렇기때문에, 메소드를 호출하려고 할 때에 함수호출을 사용하지 마세요.
 
 =begin original
 
@@ -1700,10 +1697,10 @@ start date.
 
 =end original
 
-従業員が、ただの、Person だったら、それはあまり面白くありません。
-さあ、他のメソッドを追加しましょう。
-従業員に、データフィールドを設けて、従業員の給与や、従業員 ID や、入社日に
-アクセスしましょう。
+종업원이 단순히 Person 이라면, 그것은 별로 재미없습니다.
+그럼, 다른 메소드를 추가해볼까요?
+종업원에게 데이터필드를 설계하고, 종업원의 급여와 종업원의 ID와 입사일에 
+접근해봅시다.
 
 =begin original
 
@@ -1714,11 +1711,10 @@ this up.  Meanwhile, here's the straight-forward way:
 
 =end original
 
-これらのオブジェクトのデータを取得するような、ほとんど同じメソッドたちを
-作るのにちょっと飽きたとしても、落胆しないでください。
-後で、こういった作業を短縮するための、いくつかの種々の便利な
-メカニズムについて説明します。
-その逆に、単純なやりかたは次のものです：
+이 오브젝트들의 데이터를 얻도록, 대부분 같은 메소드들을 
+만드는 것에 조금 지겹다고해도, 낙담하지 마세요.
+나중에 이런 작업을 단축하기 위한 몇 개의 편리한 매커니즘에 대해 설명하겠습니다.
+반대로, 단순한 방법은 다음과 같습니다:
 
     sub salary {
         my $self = shift;
@@ -1740,7 +1736,7 @@ this up.  Meanwhile, here's the straight-forward way:
 
 =head2 Overridden Methods
 
-(メソッドのオーバーライド)
+(메소드의 오버라이드)
 
 =begin original
 
@@ -1752,13 +1748,13 @@ of peer names, let's return slightly different strings.  So doing this:
 
 =end original
 
-派生クラスとその基底クラスの両方が同じ名前のメソッドを定義したら、
-何が起きるでしょうか? 
-たぶん、そのメソッドは派生クラスのもの(訳註:version)を得ます。
-例えば、従業員で、peers()メソッドを呼ぶと、(訳註:Personとは、)少々違った
-動きをさせたいとしましょう。
-同僚の名前のリストをただ返す代わりに、ちょっと違った文字列を返しましょう。
-次のようにします：
+파생클래스와 그 기본 클래스의 양쪽이 같은 이름의 메소드를 정의한다면,
+뭐가 발생할까요?
+아마도, 그 메소드는 파생클래스의 것을 얻습니다.
+예를 들면, 종업원으로 peers() 메소드를 호출하면, Person 과는 조금 다른 
+동작을 하게하고 싶다고 합니다.
+동료의 이름 리스트를 반환하는 것 대신에, 조금 다른 문자열을 반환합시다.
+다음처럼 합니다:
 
     $empl->peers("Peter", "Paul", "Mary");
     printf "His peers are: %s\n", join(", ", $empl->peers);
@@ -1769,7 +1765,7 @@ will produce:
 
 =end original
 
-次のようになります：
+그러면 다음처럼 됩니다:
 
     His peers are: PEON=PETER, PEON=PAUL, PEON=MARY
 
@@ -1779,7 +1775,7 @@ To do this, merely add this definition into the Employee.pm file:
 
 =end original
 
-こうするためには、単に、この定義を Employee.pm ファイルに加えるだけです。
+이렇게 하기위해서는, 단순히 이 정의를 Employee.pm 파일에 덧붙일 뿐입니다.
 
     sub peers {
         my $self = shift;
@@ -1797,13 +1793,12 @@ when the wizard decides you'd look better as a frog.)
 
 =end original
 
-ここで、ちょうど、I<多態性(polymorphism)> として広く知られている、大げさな
-コンセプトのデモンストレーションをしています。
-存在するオブジェクトの形と振るまいを担い、われわれ自身の目的に
-適応するように、存在するオブジェクトを変更します。
-これは、不精の形です。
-(polymorph させることは、魔法使いが、あなたを、蛙に
-見せようと決めるときに起こることです)。
+여기에서 딱 I<다성능(polymorphism)> 으로써 널리 알려진, 커다란 
+컨셉의 데모를 하고 있습니다.
+존재하는 오브젝트의 형태와 행동을 담당하고, 우리 자신의 목적에 
+적응하도록, 존재하는 오브젝트를 변경합니다.
+이것은 부정의 형태입니다.
+(polymorph 시키는 것은 마법사가 당신을 개구리로 보이게 할 때에 발생합니다)
 
 =begin original
 
@@ -1815,11 +1810,11 @@ sense in the debug() method we showed previously.
 
 =end original
 
-しばしば、派生クラス("サブクラス"としても知られるクラス)のもの
-(訳註：version)とその基底クラス("スーパークラス"としても知られるクラス)の
-もの(訳註：version)も同じように両方をきっかけをメソッドに呼ばせたいでしょう。
-実際に、コンストラクタとデストラクタは、そうすることを望んでいそうですし、
-先にみた、debug() メソッドでは、十中八九、そうだとうなずけます。
+매번, 파생클래스("서브클래스"라고도 알려진 클래스)와 그 기본 클래스
+("슈퍼 클래스라고 알려진 클래스)도 똑같게 양쪽을 트리거를 메소드로
+호출하고 싶지는 않나요?
+실제로, 생성자와 파괴자는 그렇게 하는 것을 기대하고 있을테고, 
+앞서 본, debug() 메소드에서는 십중팔구 그럴 겁니다.
 
 =begin original
 
@@ -1827,7 +1822,7 @@ To do this, add this to Employee.pm:
 
 =end original
 
-そうするために、Employee.pm に次のものを加えます：
+이렇게 하기해서 Employee.pm 에 다음처럼 추가합니다:
 
     use Carp;
     my $Debugging = 0;
@@ -1853,12 +1848,11 @@ from elsewhere?  It would have been slightly better to say
 
 =end original
 
-お分かりのように、(訳註：Employee から)向きを変えて、Person パッケージの
-debug() 関数を呼びます。
-ですが、良い設計にとっては、こうするのは、ひじょーに、壊れやすいものです。
-Person が debug() 関数を持っておらず、I<その> debug() メソッドを
-他のところから継承していたら、どうなるでしょう?
-次のようにする方が、良いです。
+알고 있듯이 Employee에서 방향을 바꿔, Person 패키지의 debug 함수를 호출합니다.
+하지만, 좋은 설계로는 이렇게 하는 것은 꽤 부서지기 쉽습니다.
+Person 이 debug() 함수를 가지고 있지 않으면, I<그> debug() 메소드를 
+다른 곳에서 계승하고 있다면 어떻게 될까요?
+다음처럼 하는 편이 좋을 겁니다.
 
     Person->debug($Debugging);
 
@@ -1868,8 +1862,8 @@ But even that's got too much hard-coded.  It's somewhat better to say
 
 =end original
 
-ですが、まだ、ハードコードしすぎです。
-次のようにする方が、良いです。
+하지만, 아직 멀었습니다. 
+다음처럼 하는 편이 좋겠죠?
 
     $self->Person::debug($Debugging);
 
@@ -1881,9 +1875,9 @@ than on overridden class methods.
 
 =end original
 
-これは、Person 内で、debug() メソッドを探し始める楽しいやりかたです。
-この作戦は、オーバーライドされたクラスメソッドよりも、
-オーバーライドされたオブジェクトメソッドで、よく見ます。
+이것은, Person 안에서 debug() 메소드를 찾기 시작하는 쉬운 방법입니다. 
+이 작전은, 오버라이드된 클래스메소드보다도 오버라이드된 오브젝트 메소드로 
+자주 봅니다.
 
 =begin original
 
@@ -1894,10 +1888,10 @@ comes to the rescue here.
 
 =end original
 
-少しのものがまだ、あります。
-スーパークラスの名前をハードコードしています。
-継承するクラスを変えるか、他のものを加えたら、このことは、特に、悪いです。
-幸運なことに、仮名クラスの SUPER が、ここで、助けになります。
+아직 조금 더 있습니다.
+슈퍼클래스의 이름을 너무 장황하게 쓰 있습니다.
+계승하는 클래스를 바꿀 것인가, 다른 것을 추가하면 이것은 특히 나쁩니다.
+다행히도 가명 클래스의 SUPER 가 여기에서 도움이 됩니다.
 
     $self->SUPER::debug($Debugging);
 
@@ -1911,10 +1905,10 @@ the current package, I<not> to the superclass of C<$self>.
 
 =end original
 
-こうすると、自分のクラスの @ISA をのぞき始ます。
-これは、メソッドコール I<内> から意味をなすだけです。
-他のどこからも、SUPER:: の何にも、アクセスしようとしないでください。
-というのは、上書きされたメソッド呼出の外側には存在しないからです。
+이렇게 하면, 자신의 클래스의 @ISA 를 빼기 시작합니다.
+이것은, 메소드 호출 I<안> 에서 의미를 없애는 것뿐입니다.
+다른 곳에서도, SUPER:: 의 무엇도, 접근하려고 하지 말아주세요.
+이런 것은 덮어쓴 메소드 호출의 바깥쪽에는 존재하지 않기 때문입니다.
 Note that C<SUPER> refers to the superclass of
 the current package, I<not> to the superclass of C<$self>.
 (TBT)
@@ -1929,13 +1923,13 @@ empty subclass that can derive from Employee.  Here's one:
 
 =end original
 
-事態は、ちょっと複雑になってきています。
-してはならないことをしたでしょうか?
-これまでのように、まともなクラスかどうかをテストする一つの方法は、
-空のサブクラスを経由するテストです。
-すでに、チェックしている Employee クラスがあるので、
-Employee から、新しい空のサブクラスを生成できます。
-次のものです：
+사태는 조금 복잡하게 되었습니다.
+해서는 안되는 것을 아시겠죠?
+지금까지처럼 제대로 클래스인 어떤지를 테스트하는 하나의 방법은, 
+빈 서브클래스를 경유하는 테스트입니다.
+이미 체크하고 있는 Employee 클래스가 있기때문에, 
+Employee 에서 새로운 빈 서브클래스를 생성할 수 있습니다.
+다음처럼요:
 
     package Boss;
     use Employee;        # :-)
@@ -1947,7 +1941,7 @@ And here's the test program:
 
 =end original
 
-テストプログラムです：
+테스트프로그램입니다:
 
     #!/usr/bin/perl -w
     use strict;
@@ -1975,10 +1969,10 @@ the debugger, you could use the Data::Dumper module from CPAN this way:
 
 =end original
 
-実行すると、まだ、大丈夫です。
-素敵なフォーマットで、デバッガーで 'x'コマンドを働かせる方法のように、
-オブジェクトをダンプしたいなら、CPAN から、Data::Dumpler モジュールを
-次のように使うことが出来ます：
+실행하면, 아직 괜찮습니다.
+훌륭한 포맷으로, 디버거로 'x' 커맨드를 움직이는 방법처럼, 
+오브젝트를 덤프하고 싶다면, CPAN 에서 Data::Dumper 모듈을 
+다음처럼 사용할 수 있습니다.
 
     use Data::Dumper;
     print "Here's the boss:\n";
@@ -1990,7 +1984,7 @@ Which shows us something like this:
 
 =end original
 
-次のようなものを見せます：
+다음과 같은 것을 볼 수 있습니다.
 
     Here's the boss:
     $VAR1 = bless( {
@@ -2021,16 +2015,16 @@ fix up Employee::new() this way:
 
 =end original
 
-ふーむ、何かがなくなっています。
-給与、入社日、ID フィールドはどうでしょうか?
-たぶん、それらに、何も、undef さえもセットしていません。
-そのため、ハッシュのキーに、それらが見えなかったのです。
-Employee クラスは、それ自身の new() メソッドがありません。
-Person の new() メソッドは、Employee について知りません。
-(また、そうすべきでもありません：適切なオブジェクト指向設計はサブクラスが
-そのすぐ上のスーパークラスについて知っていてもよいと指示しています。
-ですが、その逆は同様ではありません)。
-では、Employee::new() を次のように、しましょう：
+흠, 뭐가 빠져 있습빈다.
+급여, 입사일, ID 필드는 어떨까요?
+아마, 그것들에 undef 도 설정되어있지 않습니다.
+그 때문에, 해쉬의 키에, 그것들이 보이지 않는 것입니다.
+Employee 클래스는, 그것 자신의 new() 메소드가 없습니다.
+Person 의 new() 메소드는, Employee 에 대해 알지 못합니다
+(또, 그렇게 하지 않아도 됩니다: 적절한 오브젝트지향설계는 서브클래스가 
+그 바로 위의 수퍼클래스에 대해 알고 있어도 좋다고 지시하고 있습니다.
+ 하지만, 거꾸로 똑같아서는 안됩니다).
+그ㅁ, Employee::new()를 다음처럼 해봅시다:
 
     sub new {
         my $class = shift;
@@ -2049,12 +2043,12 @@ that new fields show up there now.
 
 =end original
 
-Employee か Boss オブジェクトをダンプしたら、今度は、新しいフィールドが
-そこに現れるでしょう。
+Employee 가 Boss 오브젝트를 덤프한다면, 이번에는 새로운 필드가 
+그곳에 나타날 겁니다.
 
 =head2 Multiple Inheritance
 
-(多重継承)
+(다중상속)
 
 =begin original
 
@@ -2069,17 +2063,17 @@ dubiously-OO languages like C++.
 
 =end original
 
-よし。
-初心者もオブジェクト指向のエキスパートも混乱させる危険をおかしても、白状する
-時がきました。
-Perl のオブジェクトシステムは、多重継承、または、略してMIとして知られる、
-賛否両論の考えを含んでいます。
-これが意味するのは、次のことで全てです。
-ただ一つの親クラス - 今度は、それ自身が親クラスやそのほかを持っている - を
-持つのではなく、2 つ以上の親クラスを持つことが出来ることです。
-多重継承の使うことで、トラブルに見まわれることもありますが、
-C++ のようなあいまいなオブジェクト指向言語の Perl では、うまくいけば、たいした
-問題にはならないこともあります。
+자, 초심자도 오브젝트 지향의 전문가도 혼란시키는 위험을 일으켜도, 괜찮을 때가 
+왔습니다.
+Perl 의 오브젝트 시스템은, 다중상속, 또는 줄여서 MI 라고 알려져 있는 
+찬반양론의 생각을 포함하고 있습니다.
+이것이 의미하고 있는 것은 다음이 전부입니다.
+단지 하나의 부모 클래스 - 지그은, 그 자신이 부모클래스나 그 외에 것을 가지고
+있습니다 - 를 가지는 것이 아니라, 2개 이상의 부모클래스를 가지는 것이 
+가능하다는 것입니다.
+다중상속을 사용하는 것으로, 문제에 직면할 수도 있지만, 
+C++ 같이 애매한 오브젝트지향 언어의 Perl 에서는, 잘만하면 큰 문제가 
+되지않을 수도 있습니다.
 
 =begin original
 
@@ -2092,15 +2086,11 @@ Consider a bunch of @ISA arrays like this:
 
 =end original
 
-多重継承のやりかたは、実際、非常に簡単です：@ISA 配列に二つ以上の
-パッケージ名を置けばいいだけです。
-Perlが、オブジェクトのために、メソッドを見つけに行く時がきたら、
-順番に @ISA のパッケージをそれそれ見ます。
-えっと、かなり。
-完全に再帰的で、デフォルトでは
-深さ優先です(see L<mro> for alternate method resolution orders)。
-次のような @ISA 配列の組合せを考えてください:
-(TBT)
+다중상속의 방법은 사실 매우 간단합니다 : @ISA 배열에 2개 이상의 
+패키지이름을 놓으면 되는 것 뿐이죠. Perl 이 오브젝트를 위해, 메소드를 
+찾으러 갈 때가 오면, 순서대로 @ISA 의 패키지를 각각 보게됩니다.
+완전히 재귀적으로 기본값에서는 깊이 우선입니다
+다음과 같은 @ISA 배열의 조합을 생각해보세요.
 
     @First::ISA    = qw( Alpha );
     @Second::ISA   = qw( Beta );
@@ -2112,7 +2102,7 @@ If you have an object of class Third:
 
 =end original
 
-Third クラスのオブジェクトがあるとすると、
+Third 클래스의 오브젝트가 있다고 하면,
 
     my $ob = Third->new();
     $ob->spin();
@@ -2125,9 +2115,9 @@ in the following order: Third, First, Alpha, Second, and Beta.
 
 =end original
 
-spin() メソッド(または、さらに言えば、new())をどのように見つけるのでしょうか?
-検索は、深さ優先なので、クラスは次の順番で調べられます:
-Third First Alpha Second Beta の順です。
+spin() 메소드(또는, 덧붙이자면 new()) 를 어떻게 발견하는 것일까요?
+검색은, 깊이 우선이므로, 클래스는 다음의 순서로 조사하게 됩니다.
+Third First Alpha Second Beta 의 순서입니다.
 
 =begin original
 
@@ -2139,13 +2129,11 @@ it I<was> one.
 
 =end original
 
-実際には、多重継承が使われているクラスモジュールは、ほとんどみかけません。
-ほとんどいつも、多重継承の上の別のものの中の、
-単純な一つのクラスを積んだコンテナ船を選びます。
-Person オブジェクトは、Fullname オブジェクトを I<積んだ>
-オブジェクトだからです。
-それが一つで I<あった> というわけではありません。
-(訳註:謎)
+사실, 다중상속이 사용되는 클래스 모듈은 쉽게 볼 수 있습니다.
+언제라도 다중상속 위의 다른 것 안에 단순한 하나의 클래스를 넣은 
+컨테이너선을 고릅니다. Person 오브젝트는 Fullname 오브젝트를 I<넣은>
+오브젝트이기 때문입니다.
+그것이 하나인 것은 아닙니다.
 
 =begin original
 
@@ -2159,22 +2147,21 @@ here rather than traditional module importation.)
 
 =end original
 
-しかしながら、Perl での多重継承が見境のない、一つの特別な領域があります:
-他のクラスのクラスメソッドを借りて来ることです。
-このことは、幾分普及しており、
-バンドルされている"オブジェクトのない"クラスで特にそうです。
-Exporter や、DynaLoader や、AutoLoader や、SelfLoader がそうです。
-これらのクラスは、コンストラクタを提供しません。
-これらのクラスは、(訳註：他のクラスから)クラスメソッドを
-継承するかもしれないので、存在しています。
+하지만, Perl 에서의 다중상속이 익숙하지 않은 하나의 특별한 영역이 있습니다:
+다른 클래스의 클래스 메소드를 빌려 오는 것입니다.
+이 것은 몇 가지로 나뉘어져 있고, 번들되어 있는 "오브젝트가 없는" 클래스에서 
+특히 그렇습니다. Exporter 나, DynaLoader 나, AutoLoader 나, SelfLoader 가 
+그렇습니다.
+이 클래스들은, 생성자를 제공하지 않습니다.
+이 클래스들은 다른 클래스에서 클래스 메소드를 계승할지도 모르기에 
+존재하고 있습니다.
 
 =begin original
 
 For example, here is the POSIX module's @ISA:
 
 =end original
-
-たとえば、POSIX モジュールの @ISA は次のようになっています：
+예를 들어, POSIX 모듈의 @ISA 는 다음처럼 되어 있습니다:
 
     package POSIX;
     @ISA = qw(Exporter DynaLoader);
@@ -2187,10 +2174,10 @@ classes' behaviours to POSIX.
 
 =end original
 
-POSIX モジュールは、実際には、オブジェクトモジュールではありません。
-ですが、Exporter も DynaLoader も、そうです。
-Exporderと、DynaLoader クラスは、クラスメソッドの振るまいを POSIX に、
-貸しているだけです。
+POSIX 모듈은 실제로는 오브젝트 모듈이 아닙니다.
+하지만, Exporter 도 DynaLoader 도 그렇습니다.
+Exporter 도, DynaLoader 클래스는 클래스 메소드의 행동을 POSIX에서
+빌리고 있는 것 뿐입니다.
 
 =begin original
 
@@ -2209,25 +2196,25 @@ which might well be a bad idea.
 
 =end original
 
-なぜ、オブジェクトメソッドに、多重継承が使われないのでしょうか?
-理由の一つは、複雑な副作用がありうるからです。
-まず一つ例をあげると、継承のグラフ(ツリーではなく)が、同じ基底クラスに
-もどって集中します。
-Perlは、再帰的な継承に対して防御していますが、単に、共通の祖先を通して、
-お互いに関連している親を持つことは、近親相姦に思えても、禁止されていません。
-もし、先ほど見た Third クラスで、new() メソッドが、Third クラスの 2 つの
-親クラスで、オーバーライドされたコンストラクタを両方呼ぶとしたら、
-どうなるんでしょう?
-SUPER 表記は、最初の一つしか見つけません。
-Alpha と Beta クラスの両方が、共通の祖先、たとえば Nought クラスを
-持っていたらどうでしょうか?
-オーバーライドされたメソッドを呼ぶ継承ツリーを登り続けるなら、結局、
-Nought::new() を二度呼ぶことになります。
-たぶん、それは、悪い考えでしょう。
+왜, 오브젝트 메소드에 다중상속이 사용되지 않는 것일까요?
+하나의 이유는, 복잡한 부작용이 있을 수 있기 때문입니다.
+우선 하나의 예를 들면, 상속의 그래프(트리가 아닌)가 같은 기본 클래스로 
+돌아와 집중합니다.
+Perl 은 재귀적인 상속에 대해 방어하고 있지만, 단순히 공통의 선조를 통해서 
+상호간에 관련된 부모를 가지는 것은, 근친상간을 생각할수 있어도, 
+금지되어 있지는 않습니다.
+만약, 아까전에 본 Third 클래스에 new() 메소드가 Third 클래스의 2개의 
+부모클래스에서, 오버라이드된 생성자를 양쪽에서 호출하려고 하면, 
+어떻게 될까요?
+SUPER 표기는 맨처음 한번밖에 찾을 수 없습니다.
+Alpha 와 Beta 클래스 양쪽이 공통의 선조, 예를 들어 Nought 클래스를 
+가지고 있다면 어떨까요?
+오버라이드된 메소드를 불러 계승트리를 계속 올라가면, 결국 
+그것은 좋지 않을 겁니다.
 
 =head2 UNIVERSAL: The Root of All Objects
 
-(UNIVERSAL: 全てのオブジェクトの根っこ)
+(UNIVERSAL: 모든 오브젝트의 근본)
 
 =begin original
 
@@ -2241,16 +2228,15 @@ whatever you felt like into it.
 
 =end original
 
-全てのオブジェクトが、いくつかの根本的な基底クラスに根付いていたら、
-便利でしょうか?
-すべてのオブジェクトに共通のメソッドを与えるのに、それぞれの @ISA に
-クラスを加えずにできる方法です。
-それで、そうできることがわかります。
-それを見ることはありませんが、Perl は、それとなく、決定的に、
-@ISA の終わりに、特別な要素があることを想定しています：UNIVERSAL クラスです。
-5.003 では、UNIVERSAL クラスにあらかじめ定義されているメソッドは、
-ありませんでしたが、UNIVERSAL クラスにいれたいようなものは、なんでも、
-置くことが出来ました。
+모든 오브젝트가 몇 개인가ㅢ 근본적인 기본 클래스를 근본으로 하고 있다면, 
+편리하겠죠?
+모든 오브젝트에 공통의 메소드를 주는 것에, 각각의 @ISA 에 
+클래스를 추가하지 않고 할 수 있는 방법입니다.
+그래서, 그럴 수 있다는 것을 알 수 있습니다.
+그것을 볼 수는 없지만, Perl 은, 그렇지 않고, 결정적으로 
+@ISA 의 끝에 특별한 요소가 있는 것을 상정하고 있습니다: UNIVERSAL 클래스입니다.
+5.003 에서는, UNIVERSAL 클래스에 다시금 정의되는 메소드는, 
+없지만, UNIVERSAL 클래스에 넣고 싶은 것은 무엇이든 넣을 수 있습니다.
 
 =begin original
 
@@ -2262,13 +2248,13 @@ class "is" another one without having to traverse the hierarchy yourself:
 
 =end original
 
-しかし、5.004 (または、5.003_08 のような、いくつかの破棄的なリリース)より、
-UNIVERSAL には、既にいくつかのメソッドがあります。
-これらのメソッドは、Perl バイナリに組み込まれており、そのため、それらを
-ロードするのに、余計な時間はかかりません。
-あらかじめ定義されているメソッドは、isa() 、can()、VERSION() です。
-isa() は、オブジェクトかクラスが階層構造を横断することなく、
-別のクラス"である"かどうかを教えます。
+그러나, 5.004 (또는 5.003_08 같은 몇 개의 임시 릴리즈)에서, 
+UNIVERSAL 에는, 이미 몇 개인가의 메소드가 있습니다. 
+그 메소드들은, Perl 바이너리에 포함되어 있고, 그 때문에 그것들을 
+로드하는 것에 쓸데없는 시간이 걸립니다.
+다시금 정의된 메소드는 isa(), can(), VERSION() 입니다.
+isa() 는 오브젝트 클래스가 계층구조를 종단하지 않고, 
+다른 클래스"인 지" 어떤지를 알려줍니다.
 
    $has_io = $fd->isa("IO::Handle");
    $itza_handle = IO::Socket->isa("IO::Handle");
@@ -2281,9 +2267,9 @@ In fact, it gives you back a function reference to that method:
 
 =end original
 
-can() メソッドは、オブジェクトかクラスに対して呼ばれて、その文字列の引数が
-そのクラスで、呼ぶことの出来るメソッドかどうかを帰って報告します。
-実際、そのメソッドに関数のリファレンスを返します：
+can() 메소드는, 오브젝트가 클래스에 대해 불려져서, 그 문자열의 인수가 
+그 클래스에서 부른 것을 가능한 메소드인지 어떤지를 돌아와서 보고합니다.
+실제, 그 메소드에 함수의 리퍼런스를 반환합니다:
 
    $his_print_method = $obj->can('as_string');
 
@@ -2294,10 +2280,9 @@ class) has a package global called $VERSION that's high enough, as in:
 
 =end original
 
-最後に、VERSION メソッドは、クラス(または、オブジェクトのクラス)が、
-$VERSION と呼ばれるパッケージのグローバル変数が十分に高いかどうかを
-チェックします。
-次のように：
+마지막으로, VERSION 메소드는, 클래스(또는, 오브젝트의 클래스)가, 
+$VERSION 이러고 불ㅣ는 패키지의 글로벌 변수가 충분히 높은지 어떤지를 
+체크합니다. 다음 처럼:
 
     Some_Module->VERSION(3.0);
     $his_vers = $ob->VERSION();
@@ -2311,11 +2296,11 @@ it happens when you say
 
 =end original
 
-しかし、ふつう、VERSION を自分自身には呼びません。
-(次のことを覚えておいてください。
-すべての大文字の関数名は、Perl の慣例で、その関数が、なんらかの方法で、
-Perl によって自動的に使われるだろうということを、示しています。)
-このケースでは、次のようにすると、同じことが起こります：
+그러나, 보통, VERSION을 자기자신에게는 호출하지 않습니다.
+(다음을 기억해 주세요. 
+모든 대문자의 함수이름은, Perl 의 관례에서, 그 함수가 어떤 방법으로, 
+Perl 에 의해 자동적으로 사용되어질 것이라는 것을 나타냅니다)
+이 케이스에서는 다음처럼 하면, 같은 것이 발생합니다.
 
     use Some_Module 3.0;
 
@@ -2326,8 +2311,8 @@ above, just add this to Person.pm:
 
 =end original
 
-上に説明した Person クラスでバージョンのチェックを加えたいなら、
-Person.pm に、次のことを加えるだけです：
+위에서 설명한 Person 클래스에서 버젼의 체크를 추가하고 싶다면, 
+Person.pm 에 다음을 추가할 뿐입니다.
 
     our $VERSION = '1.1';
 
@@ -2337,7 +2322,7 @@ and then in Employee.pm you can say
 
 =end original
 
-そして、Employee.pm で、次のようにできます：
+그리고, Employee.pm 에서 다음처럼 할 수 있습니다:
 
     use Person 1.1;
 
@@ -2350,16 +2335,15 @@ multiple versions of a module.  Lamentably.
 
 =end original
 
-このことで、少なくともそのバージョン番号か、それより高いものが利用可能だと
-確かめます。
-正確なバージョン番号でのロードなので、同じではありません。
-現在のところ、共同に作用する複数のバージョンのモジュールの
-インストレーションのためには、どんなメカニズムもありません。
-嘆かわしい。
+이것은, 적어도 그 패키지 번호인지 그것보다 높은 것이 이용가능하다고 
+확인합니다. 
+정화한 버젼번호에서의 로드이기에 같지는 않습니다.
+현재, 공동으로 작용하는 복수의 버젼의 모듈의 
+인스톨을 위해 어떤 매커니즘도 없습니다.
 
 =head2 Deeper UNIVERSAL details
 
-(より深い UNIVERSAL の詳細)
+(보다 자세한 UNIVERSAL 의 상세한 내용)
 
 =begin original
 
@@ -2466,7 +2450,7 @@ search in UNIVERSAL itself, only in the package's actual
 
 =head1 Alternate Object Representations
 
-(ハッシュに代わるオブジェクトの表現)
+(패키지를 대신하는 오브젝트의 표현)
 
 =begin original
 
@@ -2477,11 +2461,11 @@ game.
 
 =end original
 
-オブジェクトはハッシュリファレンスとして実装される必要はありません。
-オブジェクトは、うまく bless されるリファレンスでありさえすれば、どんな
-種類のリファレンスでも可能です。
-このことは、スカラーリファレンスでも、配列リファレンスでも、
-コードのリファレンスでも、格好の的となるということです。
+오브젝트는 해쉬리퍼런스로써 구성될 필요는 없습니다.
+오브젝트는 잘 bless 되는 리런스가 아니라면, 어떤 
+종류의 리퍼런스라도 가능합니다.
+이것은 스칼라 리퍼런스라도, 베열 리퍼런스라도, 
+코드 리퍼런스라도 좋습니다.
 
 =begin original
 
@@ -2491,14 +2475,14 @@ you have to invent new indices for the derived classes.
 
 =end original
 
-スカラーは、オブジェクトがたった一つの値しか持たないなら、うまくいきます。
-配列は、ほとんどのケースで、うまくいきます。
-ですが、継承を少々危うくします。
-派生クラスのために、新しい索引を作り上げなければならないからです。
+스칼라는 오브젝트가 단 하나의 값만 가지지않는다면, 잘 움직입니다.
+배열은, 대부분 케이스로 잘 움직입니다.
+하지만, 상속을 조금 위험하게 하겠습니다.
+파생 클래스를 위해 새로운 색인을 만들지 않으면 안되기 때문입니다.
 
 =head2 Arrays as Objects
 
-(オブジェクトとして配列を)
+(오브젝트로써 배열)
 
 =begin original
 
@@ -2510,11 +2494,11 @@ instead of a hash reference to represent the object.
 
 =end original
 
-クラスを使う人が、契約を支持し、公示されたインターフェースに我慢するなら、
-その基礎を成すインターフェースを、そうしたければ変えることが出来ます。
-同じインターフェースの仕様に合う、他の実装です。
-さて、オブジェクトを表現するのに、ハッシュリファレンスの代わりに、
-配列リファレンスを使いましょう。
+클래스를 사용하는 사람이 계약을 지지하고 공표된 인터페이스를 인정하면,
+그 기초가 되는 인터페이스를 그렇게 하고 싶다면 바꿀 수 있습니다. 
+같은 인터페이스의 스펙에 맞는 다른 구성입니다. 
+그럼 오브젝트를 표현하는 것에 해쉬리퍼런스 대신에 
+배열리퍼런스를 사용합시다.
 
     package Person;
     use strict;
@@ -2538,7 +2522,7 @@ instead of a hash reference to represent the object.
 =end original
 
     ############################################
-    ## オブジェクトコンストラクタ (配列版)    ##
+    ## 오브젝트생성자(배열판)                 ##
     ############################################
     sub new {
         my $self = [];
@@ -2585,7 +2569,6 @@ these differences will fade into obscurity as more efficient underlying
 representations are devised.
 
 =end original
-
 配列アクセスはハッシュアクセスより、だいぶ速いと思うかもしれません。
 ですが、この2つは、実際は、類似のものです。
 配列は、I<ちょっと>速い。
