--- a/trunk/perldoc/ko/perl/5.10/perltooc.pod
+++ b/trunk/perldoc/ko/perl/5.10/perltooc.pod
@@ -1332,10 +1332,10 @@ and you want more than just one cosmos.
 
 =end original
 
-将来のいつかに、一つの宇宙では十分ではないと、決心したとしましょう。
-スクラッチから新しいクラスを書くこともできますが、
-既存のクラスがあります -- 一価であることを除いて、望むクラスがあり、
-しかも、ただ、2 つ以上の宇宙が欲しいだけです。
+장래의 언젠가, 하나의 우주에서는 충분하지 않다고 결심했다고 하ì.
+스크래치에서 새로운 클래스를 쓸 수도 있습니다만, 
+기존의 클래스가 있습니다 -- monadic 인 것을 빼고, 원하는 클래스가 있고, 
+거기에 단 2개 이상의 우주만 필요할 뿐입니다.
 
 =begin original
 
@@ -1344,8 +1344,8 @@ the new code is:
 
 =end original
 
-サブクラスでコードの再利用することが全てです。
-新しいコードがどのくらい短いか、見てみましょう。
+서브클래스에서 코드의 재이용하는 것이 전부입니다.
+새로운 코드가 어느 정도 짧은가 봐주세요.
 
     package Multiverse;
     use Cosmos;
@@ -1369,11 +1369,11 @@ when invoked against separate instances of a derived class.
 
 =end original
 
-Cosmosクラスを設計している時に、慎重であり、良い小さなクリエータであったので、
-Multiverse クラスを書く際に、コードの一行もいじらないで、Cosmos クラスを
-再利用することができます。
-クラスメソッドとして呼ばれたときに動く同じコードが派生クラスの個々の
-インスタンスから呼ばれても、完全に、うまく、動き続けます。
+Cosmos 클래스를 설계할 때에 신중하고 좋은 작은 크리에이터 였기에
+Multiverse 클래스를 쓸 때에 새로운 한 줄도 건드리지 않고, Cosmos 클래스를
+재이용할 수 있습니다.
+클래스 메소드로써 호출된 때에 움직이는 같은 코드가 파생 클래스의 각각의 
+인스턴스에서 호출되어도 완전히 계속해서 잘 움직입니다.
 
 =begin original
 
@@ -1387,15 +1387,15 @@ and encapsulation.  And what more can you ask of an object?
 
 =end original
 
-上にあげた、Cosmos クラスでびっくりするのは、&bigbang "コンストラクタ" が
-返す値が、まったく、bless されたオブジェクトへのリファレンスではないことです。
-&bigbang コンストラクタが返す値は、クラス自身の名前です。
-クラス名は、全ての目的と手段にとって、実質的に、完全に条件を満たしている
-オブジェクトです。
-状態、振舞、同一性、3つの、オブジェクトシステムの重大な構成要素が、
-クラス名にはあります。
-クラス名は、継承、ポリモルフィズム、カプセル化さえも明らかにします。
-オブジェクトにこれ以上何を要求できますか？
+위에 든 Cosmos 클래스에서 깜짝놀래는 것은 &bigbang "생성자"가 
+반환하는 값이 전혀 bless 된 오브젝트로의 리퍼런스가 아니라는 것입니다.
+&bigbang 생성자가 반호나하는 값은 클래스 자신의 이름입니다.
+클래스 이름은 모든 목적과 수단으로써 실질적으로 완전히 조건을 만족하고 있는
+오브젝트입니다.
+상태, 행동, 동일성, 이 3개의 오브젝트 시스템의 중대한 구성요소가 
+클래스 이름에는 있습니다.
+클래스 이름은 상속, 다형성, 캡슐화도 확실하게 합니다. 
+오브젝트에 이 이상 무엇을 바랄 수 있을까요?
 
 =begin original
 
@@ -1407,11 +1407,11 @@ of the Perl programmer, not in the Perl language itself.
 
 =end original
 
-Perl でオブジェクト指向を理解するために、他のプログラミング言語が
-クラスメソッドとオブジェクトメソッドについて考えていることを、ただの単純な
-メソッドに統一することを認識するのが重要です。
-"クラスメソッド"と、"オブジェクトメソッド"は、Perl プログラマが心の中で
-区切っているだけで、Perl 言語それ自身の中では、区切られていません。
+Perl 에서 오브젝트 지향을 이해하기 위해, 다른 프로그래밍 언어가 
+클래스 메소드로 오브젝트 메소드에 대해 생각하는 것을 단지 단순한 
+메소드에 통일하는 것을 인식하는 것이 중요합니다.
+"클래스 메소드"와 "오브젝트메소드"는 Perl 프로그래머가 마음 속에서 
+구분하고 있는 것뿐으로 Perl 언어 자체에서는 구분짓지 않습니다.
 
 =begin original
 
@@ -1424,12 +1424,12 @@ It doesn't even have to be a reference to a brand new object.
 
 =end original
 
-これらの同じ行の間で、コンストラクタは、何も特別なものではありません。
-Perlには、それらの行に、神によって定められている名前はないのがその理由です。
-"コンストラクタ"は公式ではない述語であり、後でメソッドを呼ぶことのできる
-スカラー値を返すメソッドを説明するのを使います。
-クラス名もオブジェクトリファレンスでありさえすれば、十分、上等です。
-おろしたてのオブジェクトがリファレンスである必要さえないのです。
+이런 같은 줄사이에서 생성자는 어떤 특별한 것이 아닙니.
+Perl 에는 그런 줄에 신에 의해서 정해진 이름은 없는 것이 그 이유입니다.
+"생성자" 는 공식적이지 않은 술어이며, 뒤에 메소드를 호출할 수 있는 
+스칼라 값을 반환하는 메소드를 설명하는 것을 사용합ㅣ다.
+클래스 이름도 오브젝트 리퍼런스라면 충분히 좋습니다.
+수직의 오브젝트가 리퍼런스일 필요조차 없습니다.
 
 =begin original
 
@@ -1442,6 +1442,9 @@ or that a constructor be named new(), or that a constructor be
 used solely as a class method and not an object method.
 
 =end original
+
+자신이 원하는 것과 같은 정도의 많은 -- 또는 거의 없는 --, 생성자를 
+가질 수 있고, 자신이 하고싶은 대로 어떤 이름을 붙일 수 있습니다. 
 
 自分が望むのと同じくらい、多くの -- または、ほとんどない -- 、コンストラクタを
 持つことができますし、自分がしたいように何でも名前を付けることができます。
@@ -1461,14 +1464,14 @@ calls, both in constructors and in accessor methods.
 
 =end original
 
-次のセクションでは、コンストラクタとアクセサメソッドの両方で、
-クラスメソッドとオブジェクトメソッドの呼び出しとの間で、
-正式な区別から、我々自身がさらに遠くまでありうるということが、
-どれくらい有益であるかを示します。
+다음의 섹션ㅔ서는, 생성자와 액세러리 메소드 양쪽에서 
+클래스 메소드와 오브젝트 메소드의 호출 사이에서 
+정식적인 구별에서 우리 자신이 더욱 멀리까지 있을 듯한 것이 
+어떻게 유익한 가를 나타냅니다.
 
 =head2 Translucent Attributes
 
-(半透明の属性)
+(반투명 속성)
 
 =begin original
 
@@ -1485,18 +1488,18 @@ the class-wide default.
 
 =end original
 
-パッケージの名前のハッシュは、単にクラス単位のグローバルな状態のデータを
-持つこと以上のことに使えます。
-オブジェクト属性のデフォルトの設定を持つ、一種のテンプレートとしての役目も
-出来ます。
-これらのデフォルトの設定は、コンストラクタで、特定のオブジェクトの初期化の
-ために使うことができます。
-クラスの名前のハッシュは、I<半透明の属性> を実装するのにも使えます。
-半透明の属性とは、クラスワイドのデフォルトを持つ属性です。
-それぞれのオブジェクトは属性にそれ自身の値をセットできます、
-そこでは、C<< $object->attribute() >> で、値を返します。
-ですが、値がまだセットされていなければ、C<< $object->attribute() >> は、
-クラスワイドのデフォルトを返します。
+패키지의 이름의 해쉬는, 단순히 클래스 단위의 글로벌한 상태의 데이터를 
+가지는 것 이상의 것에 사용할 수 있습니다.
+오브젝트 속성의 기본값의 설정을 가지고 일종의 템플레이트로써의 역할도 
+가능합니다.
+이 기본값의 설정은 생성자에서 특정의 오브젝트의 초기화를 위해
+사용할 수 있습니다.
+클래스의 이름 해쉬는, I<반투명의 속성>을 구성하는 것에도 사용할 수 있습니다.
+반투명의 속성이라는 것은 클래스 와이드의 기본값을 가지는 속성입니다.
+각각의 오브젝트는 속성에 그 자신의 값을 정의할 수 있습니다.
+거기에서는 C<< $object->attribute() >> 에서, 값을 반환합니다.
+하지만, 값이 아직 정의되어 있지 않으면, C<< $object->attribute() >> 는 
+클래스 와이드의 기본값을 반환합니다.
 
 =begin original
 
