--- a/trunk/perldoc/ko/perl/etc/perlnewmod.pod
+++ b/trunk/perldoc/ko/perl/etc/perlnewmod.pod
@@ -1,79 +1,74 @@
-=head1 名前
+=head1 이름
 
-perlnewmod - 新しいモジュールを配布するには
+perlnewmod - 새로운 모듈을 배포하기 위해 
 
-=head1 説明
+=head1 설명
 
-このドキュメントは、Perl モジュールを書き、配布する準備をして、CPAN を
-通じて取得可能にするためのアドバイスです。
+이 문서는 Perl 모듈을 써서, 배포하는 준비를 하고, CPAN을 통해서 
+얻을 수 있도록 하기 위한 어드바이스입니다.
 
-Perl が実際にこんなに強力な理由の1つとして、Perl ハッカーたちが、自分
-の直面した問題への解決策を共有しようとしていることが挙げられるでしょう。
-だから、みんなが同じ問題に悩む必要はないわけです。
+Perl 이 실제로 이렇게 강력한 이유의 하나로써는 Perl 해커들이 자신들이 
+직면한 문제의 해결법을 공유하려고 하는 것이라고 할 수 있겠죠.
+그래서, 모두가 같은 문제에 고민할 필요는 없다는 것입니다.
 
-これが実現されているのは、多くの場合あるソリューションを抽象化して、
-Perl モジュールにしているということです。もしこれがなんのことかわから
-なければ、このドキュメントの残りはあまり役には立たないでしょうし、今ま
-でにたくさんの便利なコードを見逃していることでしょう。L<perlmod>,
-L<perlmodlib>, L<perlmodinstall> をよく読んで、ここに戻って来てくださ
-い。
+이것이 실현되는 것은 많은 경우의 솔루션을 추상화해서 
+Perl 모듈에 하고 있는 것입니다. 만약 이것이 무엇인지 모르겠다면,
+이 문서의 남은 부분은 그다지 도움이 되지 않을 것이고, 지금까지 
+많은 편리한 코드를 보고 헤매고 있을 것입니다. L<perlmod>, 
+L<perlmodlib>, L<perlmodinstall> 을 잘 읽고 다시 와주세요.
 
-もし、あなたがやるべきことに関するモジュールが存在せず、自分でコードを
-書かないといけないとなったときには、そのソリューションをモジュールに詰
-め込んで CPAN にアップロードすることを検討してください。そうすれば、他
-のみんなの利益になります。
+만약, 당신이 해야하는 것에 관한 모듈이 존재지 않고, 자신이 코드를 
+쓰지 않으면 안될 때에는 그 솔루션을 모듈에 넣고 CPAN에 업로드하는 것을 
+검토해주세요. 그렇게 하면 다른 모든 이에게 이익이 될겁니다.
 
-=head2 警告
+=head2 경고
 
-ここでは主にピュアPerl のモジュールについて説明し、XS モジュールについ
-ては触れません。XS モジュールは、通常とは若干異なる目的で利用されるた
-め、配布する際には別の問題について考慮する必要があります。つまり、糊付
-け(glue)の対象となるライブラリの人気、他のOSへのポータビリティなどです。
-しかし、モジュールの準備やパッケージング、配布の説明は、XS モジュール
-にも同様に当てはまるでしょう。
+여기에서는 주로 Pure Perl 의 모듈에 대해서 설명하고, XS 모듈에 대해서는
+건드리지 않습니다. XS 모듈은 일반적으로는 약간 다른 목적으로 이용되기에 
+배포할 때에는 별도의 문제에 대해서 고려할 필요가 있습니다. 즉, glue의
+대상이 되는 라이브러리의 인기, 다른 OS로의 포터빌리티 등입니다.
+그러나 모듈의 준비나 패키징, 배포의 설명은 XS 모둘에도 똑같이 적용될겁니다.
 
-=head2 なにをモジュールにしたらいい？
+=head2 무엇을 모듈로 하면 좋은가?
 
-他の人に便利になるものなら、どんなコードでもモジュールにするべきです。
-みんなが使っているライブラリに足りないものを補って、しかも他の人が自分
-のプログラムに直接組み込めるものならなんでもOKです。あなたのコードのう
-ち、単独でとりだして、他のものに組み込めるものがあれば、それはモジュー
-ルの候補になりえるでしょう。
+다른 사람에게 편리한 것이라면 어떤 코드라도 모듈로 해야합니다.
+모두가 사용하고 있는 라이브러리에 부족한 것을 넣고, 거기에 다른 사람이 자신의
+프로램에 직접 집어넣는 것이라면 뭐든지 OK입니다. 당신의 코드에 
+단독으로 날아서 다른 것에 넣을 것이 있다면 그것은 모듈의 후보가 될 것입니다.
 
-例をとってみましょう。ローカルのフォーマットからデータを読みだし、Perl 
-のハッシュリファレンスのハッシュにして、ツリー構造にして、ツリーを操作
-してそれぞれのノードを Acme Transmogrifier Server にパイプするとします。
+예제를 보겠습니다. 로컬의 포맷에서 데이터를 읽어들여, Perl 의 
+해쉬리퍼런스의 해쉬로 해서, 트리 구조로 해서, 트리를 조작해서 
+각각의 노드를 Acme Transmogrifier Server 에 파이프한다고 합시다.
 
-さて、Acme Transmogrifier をもっている人はあんまりいないとしましょう。
-ですから、そのプロトコルを話すコードをスクラッチから書かなくてはならな
-いでしょう。そんな時、それをモジュールにしたいはずです。どのレベルで操
-作するかはあなた次第です。L<Net::SMTP> のようなプロトコルレベルのモジュー
-ルから、L<Mail::Send> のような高レベルで操作するモジュールまで。決定す
-るのはあなたですが、サーバプロトコルに特化したモジュールをつくりたいで
-しょう。
+그럼 Acme Transmogrifier 를 가지고 있는 사람은 그다지 없을 겁니다.
+그렇기에 그 프로토콜을 이야기하는 코드를 스크래치에서 쓰지 않으면 
+안되겠죠. 그럴 때, 그것을 모듈로 하고 싶을 겁니다. 어떤 레벨에서 
+조작하는 가는 당신이 하기 나름ㅣㅂ니다. L<Net::SMTP> 같은 프로토콜 레벨의
+모듈에서 L<Mail::Send> 같은 높은 레벨에서 조작하는 모듈까지. 결정하는 것은
+당신입니다만, 서버 프로토콜에 특화한 모듈을 만들고 싶겠죠?
 
-あなたのローカルデータフォーマットに興味がある人はいません。だからそれ
-は無視しましょう。ただ、その中間データはどうしましょう。Perl 変数から
-ツリー構造を作って、それをトラバースするのはよくあることです。それに、
-もしそういったモジュールを誰もかいてないのであれば、そのコードもまたモ
-ジュール化したくなるでしょう。
+당신의 로컬 데이터 포맷에 흥미가 있는 사람은 없습니다. 그래서 그것은 
+무시하겠습니다. 단, 그 안의 데이터는 어떻게 할까요? Perl 변수에서 
+트리구조를 만들어서 그것을 트라버스 하는 것은 종종 있는 일입니다.
+거기에 만약 그런 모듈을 누군가 쓰지 않았다면, 그 코드를 다시 
+모듈화하고 싶을 겁니다.
 
-さあ、どんなものをモジュール化すればいいのか、だんだんわかってきたでしょ
-う。これからそれをどうやってやるのか見てみましょう。
+그럼, 어떤 것을 모듈화하면 좋을까, 조금은 알게 되셨을겁니다.
+이제부터 그것을 어떻게 해서 하는 것인지 보도록 하죠.
 
-=head2 Step-by-step: 地面の整備
+=head2 Step-by-step: 지면의 정비
 
-コードを書きはじめるまえに、やっておきたいことがいくつかあります。
+코드를 쓰기 시작하기 전에, 해둬야할 것이 몇 개 있습니다.
 
 =over 3
 
-=item 見てまわる
+=item 찾아보기
 
-たくさんのモジュールをみて、どんな風に書かれているかみてみましょう。
-L<Text::Tabs> は標準ライブラリで、きれいに書かれていてとてもシンプルで
-すので、これからはじめるとよいでしょう。次に L<Time::Zone> や 
-L<File::Copy>、それにもしオブジェクト指向のコードを書こうと思っている
-なら、C<Mail::*> のいくつかをみてみるとよいでしょう。
+많은 모듈을 보고, 어떤 식으로 쓰여져있는 가 보도록 합시다.
+L<Text::Tabs> 는 표준 라이브러리에서 깨끗하게 쓰여져 있어서 매우 심플하기에
+이것부터 시작하는 것이 좋을 겁니다. 다음에 L<Time::Zone> 이나 
+L<File::Copy> 그것에도 오브젝트 지향의 코드를 사용하려고 한다면, 
+C<Mail::*> 중에 몇 개를 봐두는 것도 좋을 겁니다.
 
 そうすれば、モジュールがどのようにレイアウトされ、書かれているか、大体
 わかってくるはずです。
