--- a/trunk/perldoc/ko/perl/etc/perlnewmod.pod
+++ b/trunk/perldoc/ko/perl/etc/perlnewmod.pod
@@ -70,120 +70,113 @@ L<Text::Tabs> 는 표준 라이브러리에서 깨끗하게 쓰여져 있어서 
 L<File::Copy> 그것에도 오브젝트 지향의 코드를 사용하려고 한다면, 
 C<Mail::*> 중에 몇 개를 봐두는 것도 좋을 겁니다.
 
-そうすれば、モジュールがどのようにレイアウトされ、書かれているか、大体
-わかってくるはずです。
+그렇게 하면, 모듈이 어떻게 레이아웃되고, 쓰여지는 지 대강 알 수 있을 겁니다.
 
-=item 新しいものかどうかチェックする
+=item 새로운 것인지 어떤 지를 체크
 
-CPAN にはたくさんのモジュールがありますから、あなたがコントリビュート
-しようとしているモジュールとそっくりなものがあっても、見過ごしてしまう
-かも知れません。モジュールリストや F<by-module> ディレクトリをよくみて、
-車輪の再発明をしていないかどうか確認しましょう!
+CPAN 에는 많은 모듈이 있기때문에, 당신이 컨트리뷰트하려고 하는 모듈과 
+닮은 것이 있어도 지나쳐버릴 지도 모릅니다. 모듈리스트나 F<by-module> 디렉토리를
+잘 보고, 차바퀴의 재발명을 하고 있지 않은지를 확인합시다!
 
-=item 必要性を議論する
+=item 필요성을 의논
 
-あなたはそれを気に入っているでしょう。他のみんなも、それを必要とすると
-思っているでしょう。でも、実際にはそんなに需要はないかもしれません。自
-分のモジュールがどの程度需要があるのか不安だったら、
-C<comp.lang.perl.modules> に投稿してみましょう。それでもだめなら、
-C<modules@perl.org> のモジュールメーリングリストに聞いてみましょう。こ
-のメーリングリストはクローズドで、待ち時間が長いことに気を付けてくださ
-い。レスポンスが返ってくるまでには、しばらく待つ必要があるかもしれませ
-ん。
+당신은 그것을 맘에 들어할 겁니다. 다른 모두도 그것을 필요로 한다고 생각하겠죠.
+하지만 실제로는 그렇게 유용한 것이 아닐지도 모릅니다. 자신의 모듈이 어느 정도
+유용한 것인지 불안하다면 C<comp.lang.perl.modules> 에 글을 올려봅시다.
+그래도 안된다면, C<modules@perl.org> 의 모듈 메일링리스트를 열도 둡시다.
+이 메일링리스트는 Closed하고 대기 시간도 긴 것에 주의해주세요.
+답변이 오기까지에는 잠깐 기다릴 필요가 있을 지도 모르겠습니.
 
-=item 名前を決める
+=item 이름을 결정 
 
-CPAN にふくまれる Perl モジュールには、ネーミング階層があり、それに合
-わせる必要があります。これがどのように整理されているかの詳細は、
-L<perlmodlib> をみてください。また、CPAN やモジュールリストを見て回っ
-て、どんなものか触れてみてください。少なくとも、これだけは覚えておいて
-ください: モジュール名は大文字ではじめる (This::That のように), カテゴ
-リに適合している、そして、目的を簡潔に説明している。
+CPAN 에 포함된 Perl 모듈에는 네이밍계층이 있어, 그것에 맞출 필요가 있습니다.
+이것이 어떻게 정리되고 있는지의 상세한 내용은 L<perlmodlib>을 봐 주세요.
+또, CPAN 이나 모듈리스트를 돌아보고, 어떤 것을 만져보세요. 적어도 이것만은 
+기억해두세요: 모듈이름은 대문자로 시작한다(This::That 처럼), 카테고리에 
+적합한다, 그리고 목적을 간결하게 설명한다.
 
-=item もう一度チェック
+=item 다시 한번 체크
 
-そうしている間に、書こうとしているモジュールに似たモジュールを本当に見
-過ごしていないか、確認してください。
-
-整理が付いて、そのモジュールは必要とされていて、まだ存在しないと確信し
-たら、コードを書きはじめましょう。
+그렇게 하고 있는 사이 쓰려고 하는 모듈과 비슷한 모듈을 정말 보지못하고 
+지나치지는 않았나 확인해주세요.
+정리해두고, 그 모듈은 필요로 하고 있고 아직 존재하지 않는다고 확신하면 
+코드를 쓰기 시작합시다.
 
 =back
 
-=head2 Step-by-step: モジュールを作る
+=head2 Step-by-step: 모듈을 만들기
 
 =over 3
 
-=item F<h2xs> からはじめる
+=item F<h2xs> 로 시작
 
-L<h2xs>は、もともとは CヘッダファイルをXS モジュールにするためのユーティ
-リティだったのですが、ピュア Perl モジュール用のスケルトンをつくるユー
-ティリティとしても便利です。もし L<Autoloader> (大きなモジュールを小さ
-なルーチンに分割するモジュール) が必要なければ、以下のように実行します:
+L<h2xs>는 우너래 C 헤더파일을 XS 모듈로 하기위한 유틸리티였지만, 
+Pure Perl 모듈용의 스켈레톤을 만드는 유틸리티로써도 편리합니다.
+만약 L<Autoloader> (큰 모듈을 작은 루틴으로 분할하는 모듈)가 
+필요하지 않다면, 아래처럼 실행해주세요.
 
     h2xs -AX -n Net::Acme
 
-C<-A> は Autoloader を省略し、C<-X> は XS を省略します。C<-n> でモジュー
-ルの名前を指定します。
+C<-A> 는 Autoloader 를 생략하고, C<-X> 는 XS를 생략합니다. C<-n>로 
+모듈의 이름을 지정합니다.
 
 =item Use L<strict> and L<warnings>
 
-モジュールのコードは warning と strict クリーンでなくてはなりません。
-どんな状況でそのモジュールが利用されるかわかりませんから。それに、
-warning や strict クリーンでないコードなんて、配布したくないでしょう?
+모듈의 코드는 warnings 와 strict 클린하지 않으면 안됩니다.
+어떤 상황에서 그 모듈이 이용되는지 알 수 없기 때문이죠. 거기에 
+warnig 이나 strict 클린하지 않은 코드같은 건 배포하고 싶지도 않겠죠?
 
 =item Use L<Carp>
 
-L<Carp> モジュールを使うと、エラーメッセージを呼び出し側の視点から出力
-することが出来ます。そのモジュールではなく、呼び出し側の問題であること
-を示せるのです。たとえば、このようにすると:
+L<Carp> 모듈을 사용하면, 에러메시지를 호출하는 측의 시점에서 출력할 수 
+있습니다. 그 모듈이 아니고, 호출하는 측의 문제인 것을 나타내는 것입니다.
+예를 들면, 이렇게 하면:
 
     warn "No hostname given";
 
-ユーザはこのようなメッセージを見ることになります:
+유저는 이런 메시지를 보게 됩니다.
 
     No hostname given at /usr/local/lib/perl5/site_perl/5.6.0/Net/Acme.pm
     line 123.
 
-これでは、あなたのモジュールが何か間違ったことをしているように見えます。
-代わりに、ユーザに責任をなすりつけられるのです。このように出力します:
+이것으로는 당신의 모듈이 뭔가 틀린 일을 하고 있는 것처럼 보입니다.
+대신에 유저에게 책임을 없게하는 것입니다. 이처럼 출력합니다:
 
     No hostname given at bad_code, line 10.
 
-こうするには、L<Carp> をつかって、C<warn> を C<carp> に置き換えます。
-もし C<die> する必要があるなら、C<croak> を使いましょう。ただ、本当に
-あなたのモジュールの責任によるチェックの場合は、C<warn> や C<die> のま
-まにしておきましょう。
+이렇게 하면, L<Carp>를 사용해서 C<warn> 을 C<carp> 로 바꿉니다.
+만약 C<die> 할 필요가 있다면, C<croak> 를 사용합시다. 단지 진정으로 
+당신의 모듈의 책임에 따라 체크할 경우는 C<warn> 이나 C<die> 대로 
+둡시다.
 
-=item Use L<Exporter> - かしこく!
+=item Use L<Exporter> - 현명하게!
 
-C<h2xs> は L<Exporter> の切れ端を提供します。これによって、シンボルや
-サブルーチンをモジュールから呼び出し側の名前空間にエクスポートする標準
-的な方法がわかるでしょう。たとえば、C<use Net::Acme qw(&frob)> と書け
-ば、C<frob> サブルーチンをインポートします。
+C<h2xs> 는 L<Exporter> 의 일부분을 제공하고 있습니다.
+이에 의해, 심볼이나 서브루틴을 모듈에서 호출하는 측의 이름공간에 Export 하는
+표준적인 방법을 알게 될겁니다. 예를 들면, C<use Net::Acme qw(&frob)> 라고 
+쓰면 C<frob> 서브루틴을 Import 합니다.
 
-パッケージ変数の C<@EXPORT> によって、呼び出し側が単純に C<use
-Net::Acme> と書いたときに、どのシンボルがエクスポートされるかが決まり
-ます。ほとんどの場合は、ここには何もいれくないでしょう。一方、
-C<@EXPORT_OK> をつかうと、どの変数をエクスポートしてもよいかを指定でき
-ます。たくさんのシンボルをエクスポートしたい場合は、C<%EXPORT_TAGS> を
-つかって、エクスポートのセットを定義しましょう。詳しくは L<Exporter> 
-を見てください。
+패키지 변수의 C<@EXPORT> 에 의해 호출하는 측이 단순히 C<use Net::Acme> 라고 
+쓴 때에, 어떤 심볼이 Export 되는 것인가 결정됩니다. 대부분의 경우는 여기에는
+아무것도 넣고 싶지 않겠죠. 한편 C<@EXPORT_OK> 를 사용하면, 어떤 변수를
+Export 해도 좋은지를 지정할 수 있습니다. 많은 심볼을 Export 하고 싶은 경우, 
+C<%EXPORT_TAGS> 를 사용해서, Export 설정을 정의합시다. 자세한 것은 
+L<Exporter> 를 봐주세요.
 
-=item plain old documentation をつかう
+=item plain old documentation 를 사용
 
-仕事はペーパーワークがすむまでは、終わりではありません。モジュールのド
-キュメントを書くための時間が必要です。C<h2xs> を利用すれば、テンプレー
-トをつくってくれますので、それを埋めればよいです。フォーマットがよくわ
-からなければ、まずは L<perlpod> を見てください。モジュールをどのように
-使うかのおおまかな概要、そしてシンタックスの説明や、それぞれのサブルー
-チンやメソッドの機能説明を提供してください。開発者のノートとして Perl 
-のコメントを利用し、エンドユーザへのノートには POD を使ってください。
+일은 Paper Work 가 끝나기 까지는 끝나지 않습니다. 모듈의 문서를 
+쓰기 위한 시간이 필요합니다. C<h2xs> 를 이용하면, template 를 
+만들어 주기때문에, 그것을 넣으면 됩니다. 포맷을 잘 모르겠다면, 
+우선은 L<perlpod>를 봐주세요. 모듈을 어떻게 사용하는 가하는 자세한 개요, 
+그리고 신택스의 설명이나 각각의 서브루틴이나 메소드의 기능설명을 
+제공해주세요. 개발자의 노트로써 Perl 의 코멘트를 이용하고, 
+엔드유저로의 노드에는 POD를 사용해주세요.
 
-=item テストを書く
+=item 테스트 쓰기
 
-ぜひユニットテストコードをつくって、あなたのモジュールが、いろんなプラッ
-トフォーム上の Perl で、意図した通りにうまく動くことを確認しましょう。
+반드시 유닛 테스트 코드를 만들고, 당신의 모듈이 여러 플랫폼위의
+Perl 에서 의도한대로 잘 움직이는 것을 확인합시다.
 CPAN にモジュールをアップロードすると、たくさんのテスターがモジュール
 をビルドして、テストの結果をあなたに送ってくれるでしょう。ここでもまた、
 C<h2xs> をつかえば、あとで拡張可能な、テストフレームワークが提供されま
